# stackvm

./: .env.example  .gitignore  Dockerfile  Makefile  best_pratice_workspace.ipynb  check.py  commit_message_wrapper.py  config.py  data_preparation.ipynb  experiment.ipynb  git_manager.py  instruction_handlers.py  llm_interface.py  main.py  milestones.py  optimize_plan.py  plan_evaluation_workbook.ipynb  plan_example.md  plan_opt.py  plan_optimization.py  plan_optimization_workbook.ipynb  prompts.py  pyproject.toml  readme.md  spec.md  stackvm.py  test.ipynb  tidb_docs_clean.ipynb  tools_instruction.md  utils.py  variable_manager.py  visualization.py  vm.py
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 13d366f44c57_.py  248f7dd68288_.py  2750b07f8551_.py  27aebe1c07ac_.py  2b321abca06d_.py  338c33e23e19_.py  463f3528ed11_.py  4bee4d6f9670_.py  (+12 more)
app/: database.py
best_practices/: qa.md  research_analysis.md  research_analysis_basic.md
data_prep/: data_check.py  data_preparation.ipynb
hooks/: post-receive
mcts_optimization/: plan_optimizer.py
notebooks/: best_pratice_workbook.ipynb  initialize_labels.py  mcts_optimizer.py  optimize_plan.py  plan_chat_optimizer.py  plan_evaluation_workbook.ipynb  plan_mcts_optimizer.py  plan_optimization_chat.py  tasks.py
plan_optimization/: best_pratice_workbook.ipynb  plan_optimization_workbook.ipynb
static/: scripts.js  styles.css
templates/: best_plans.html  index.html
tests/: test_label_classifier.py
tools/: __init__.py  llm.py  report_utils.py  retrieve.py  smart_retrieve.py
(+73 files in other folders)
