[tool.poetry]
name = "stackvm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.43"
flask = "^3.0.3"
openai = "^1.51.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
pymysql = "^1.1.1"
readerwriterlock = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
